test/corpus/bugs.txt
==================
answers with free text of 4 words
==================

[ask:
  {text: txt}
  {answers:
    {y:[todo:]}
    {1 2 3 4: [todo:]}}]

---
(source_file (decision_graph (ask_node (text_sub_node (free_text)) (answers_sub_node (answer_sub_node (free_text_no_colon) (decision_graph (todo_node))) 
(answer_sub_node (free_text_no_colon) (decision_graph (todo_node)))))))


==================
answers with free text with several spaces
==================

[ask:
  {text: txt     txt}
  {answers:
    {y:[todo:]}
    {1 2 3 4: [todo:]}}]

---
(source_file (decision_graph (ask_node (text_sub_node (free_text)) (answers_sub_node (answer_sub_node (free_text_no_colon) (decision_graph (todo_node))) 
(answer_sub_node (free_text_no_colon) (decision_graph (todo_node)))))))


==================
empty answer should be allowed
==================


[>harm< ask:
  {text: How harmful are the data?}
  {answers:
    {harmless: <*No need to do anything, this is set at line 1.*>}
  }
]

---
(source_file (decision_graph (ask_node (node_id (node_id_value)) (text_sub_node (free_text)) (answers_sub_node (answer_sub_node (free_text_no_colon) (comment))))))


==================
single qoute breaking free text
==================


[todo: it's a bug]

---
(source_file (decision_graph (todo_node (free_text))))

==================
free text unable to handle colon
==================

[ todo: this is a free:text]
---
(source_file (decision_graph (todo_node (free_text))))


==================
consider aggregate option
==================

[consider:
    {slot:Subject}
    {options:
        {world, moon:[set: X+=zzzz] }
    }
]


---

(source_file (decision_graph (consider_node (slot_sub_node (slot_reference (slot_identifier))) (consider_options_sub_node (consider_option_sub_node (slot_value) 
(slot_value) (decision_graph (set_node (assignment_slot (aggregate_assignment_slot (slot_reference (slot_identifier)) (slot_value))))))))))


==================
single curly qoute breaking free text
==================


[todo: it’s a bug]

---
(source_file (decision_graph (todo_node (free_text))))

==================
single whatever this is breaking free text
==================


[todo: it;s a bug]

---
(source_file (decision_graph (todo_node (free_text))))
