test/corpus/sanity.txt

==================
sanity todo
==================
[ todo : ]

---

(source_file (decision_graph (todo_node)))

==================
sanity todo 2
==================
[todo : test]

---

(source_file (decision_graph (todo_node (free_text))))


==================
sanity end
==================
[ end ]

---

(source_file (decision_graph (end_node)))

==================
sanity ask node
==================

[ask:
    {text: txt }
    {answers: {yes: [todo : ] } }
]

---

(source_file 
    (decision_graph 
        (ask_node 
            (text_sub_node 
                (free_text)) 
            (answers_sub_node 
                (answer_sub_node 
                    (free_text) 
                    (decision_graph 
                        (todo_node)))))))
                        
==================
sanity ask node yes no
==================


  [>n4< ask:
    {text: continue?}
    {answers: {no: [end]}}
  ]

---

(source_file (decision_graph (ask_node (node_id) (text_sub_node (free_text)) (answers_sub_node (answer_sub_node (free_text) (decision_graph (end_node)))))))



==================
sanity consider
==================

[>cn< consider:
  {slot: aSlot}
  {options:
    {mineral: [todo:]}
  }
]
---

(source_file (decision_graph (consider_node (node_id) (slot_sub_node (slot)) 
(consider_options_sub_node (consider_option_sub_node (slot_value) (decision_graph 
(todo_node)))))))


==================
sanity when node
==================
[when:
  {Subjects+=livingPresons: [call: privacy]}
  {Subjects+=deceasedPresons; Domains += medical: [call: privacy]}
  {else:
    [call: open-data]
  }
]

---

(source_file (decision_graph (when_node (when_answer_sub_node (assignment_slot (aggregate_assignment_slot (slot) (slot_value))) (decision_graph (call_node))) (when_answer_sub_node (assignment_slot (assignment_slot (aggregate_assignment_slot (slot) (slot_value))) (assignment_slot (aggregate_assignment_slot (slot) (slot_value)))) (decision_graph (call_node))) (else_sub_node (decision_graph (call_node))))))


==================
sanity set node
==================

[set: DataTags/Mid1/Bottom1=b1a]
---

(source_file (decision_graph (set_node (assignment_slot (atomic_assignment_slot (slot) (slot_value)))))) 

                        
==================
sanity set node 2
==================

[set: name += val]
---

(source_file (decision_graph (set_node (assignment_slot (aggregate_assignment_slot (slot) (slot_value))))))  


==================
sanity set node 3
==================

[set: DataTags/Mid1/Bottom1=b1a; DataTags/Mid2/Bottom2+={b2b, b2c}]

---

(source_file (decision_graph (set_node (assignment_slot (assignment_slot (atomic_assignment_slot (slot) (slot_value))) (assignment_slot (aggregate_assignment_slot (slot) (slot_value) (slot_value)))))))


==================
sanity reject node
==================

[reject: Cannot deposit data obtained by breaching the law.]

---

(source_file (decision_graph (reject_node (free_text))))


==================
sanity import
==================

[#import storage: aux/storage.dg ]

---

(decision_graph)